--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
 </head>
 <body>
 <header>carrosbaixos</header>
-<section class="top1">  
+<section class="top1"> 
+    <div class="chamada-de-texto">
+        <h1>video clipe carro baixos</h1>
+        <p>baixos brasil</p>
+    </div>
+    <div class="video">
 </body><iframe width="560" height="315" src="https://www.youtube.com/embed/a9Z-dMFHl_w?si=GqTcT3Zofov7q0Rl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </section>
+<div></div>
 </html>
