--- a/index.html
+++ b/index.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>carrosbaixos</title>
+    <link rel="stylesheet" href="style.css">
+
 </head>
+
 <body>
-<header>carrosbaixos</header>
-<section class="top1"> 
-    <div class="chamada-de-texto">
-        <h1>video clipe carro baixos</h1>
-        <p>baixos brasil</p>
-    </div>
-    <div class="video">
-</body><iframe width="560" height="315" src="https://www.youtube.com/embed/a9Z-dMFHl_w?si=GqTcT3Zofov7q0Rl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <header>carrosbaixos</header>
+    <section class="top1">
+        <div class="chamada-de-texto">
+            <h1>video clipe carro baixos</h1>
+            <p>baixos brasil</p>
+        </div>
+        <div class="video">
+</body><iframe width="560" height="315" src="https://www.youtube.com/embed/a9Z-dMFHl_w?si=GqTcT3Zofov7q0Rl"
+    title="YouTube video player" frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </section>
 <div></div>
+
 </html>
